[package]
name = "tetra-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["gzip"] }
tokio = { version = "1.42.0", features = ["full"] }
